--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,13 +14,8 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1or6b2roqil0x.cloudfront.net/H6fxKD4Jq"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d3twnfu6dd6xpm.cloudfront.net/C2jxKD4Jt"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
-<h2>总统就职时需要手放在圣经上吗</h2>
-<p>目前一些川普宣誓就职的图片在网上热传，显示总统的手并未放在圣经上。</p>
-<p>大多数总统在宣誓时会将手放在圣经上，但这只是传统，并非宣誓的必要条件。</p>
-<p>根据美国宪法第六条第三款，国会议员、州立法机构成员以及行政和司法官员需要通过“宣誓或保证”支持宪法。但关键在于誓词本身，而非将手放在圣经上的行为。</p>
-<p>换言之，誓词的内容才是确认任职的必要条件，而非其他象征性行为。</p>
 <h2>川普参加首次荣誉仪式</h2>
 <p>美国总统唐纳德·川普（特朗普）参加了首次荣誉仪式，该仪式的参与者包括来自宾夕法尼亚州巴特勒（Butler, Pennsylvania）的急救人员代表。</p>
 <p>这项仪式是总统就职典礼传统的一部分，充分展示了美国军队的范围和规模，并具有象征性的意义，对美国总统而言尤为重要。</p>
@@ -280,7 +275,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418294.md#1">贸易、关税、能源市场对川普就职演说的反应</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418097.md#1">【名家专栏】川普2.0强势登台 中共如何应对</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/27/n11282738.md#1" target="_blank">纽约11位国会议员褒奖法轮大法</a></li><hr>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/16/n10398402.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/3/29/n2063491.md#1" target="_blank">法轮功为什么要去中南海</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
